tdf#91633 - dispose chart data-table entries correctly.

Change-Id: Ia26df029888f47a0395ea3c8bd7e0e51a1706c2a